# planova

./: .firebaserc  .gitignore  README.md  TODOS.md  firebase-applet-config.json  firebase-blueprint.json  firestore.indexes.json  firestore.rules  index.html  metadata.json  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
docs/: CONCEPT.md  PRD.md  PREMORTEM.md  SMOKE.md  UX-SSD.md
public/: _headers
src/: App.tsx  constants.ts  firebase.ts  index.css  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: README.md  icon.icns
src-tauri/src/: lib.rs  main.rs
src/app/: dependencies.ts
src/components/: DailyPulseCard.tsx  GhostBlock.tsx  HistoryView.tsx  MonthView.tsx  QuickAddInput.tsx  RecurrenceActionDialog.tsx  SettingsPage.tsx  Sidebar.tsx  TaskCard.tsx  TaskModal.tsx  ThreeDayView.tsx  ThreeDayViewColumn.tsx  Timeline.tsx  TimelineShared.tsx  Toast.tsx  TopBar.tsx  WeekView.tsx  WeeklyTrendChart.tsx  error-boundary.tsx  recommendations-panel.tsx  settings-ai-section.tsx  settings-backup-section.tsx  settings-calendar-section.tsx  settings-diagnostics-section.tsx  timeline-block-utils.ts  timeline-block.tsx  timeline-geometry.ts  timeline-header.tsx  week-view-helpers.ts
src/domain/: ai-cache-entry.ts  ai-credential.ts  ai-errors.ts  backup-bundle.ts  backup-errors.ts  errors.ts  external-calendar-event.ts  log-entry.ts  recurrence-rule.ts  result.ts  schedule-block.ts  task.ts
src/hooks/: use-daily-pulse.ts  use-ghosts.ts  use-task-crud.ts  (+8 more)
(+68 files in other folders)
